--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3'
+
 services:
   gpt-researcher:
-    image: assafelovic/gpt-researcher
-    build: ./
-    environment: 
-      OPENAI_API_KEY: ${OPENAI_API_KEY}
-      TAVILY_API_KEY: ${TAVILY_API_KEY}
+    build:
+      context: .
+      target: gpt-researcher
+    env_file:
+      - .env
     ports:
-      - 8000:8000
+      - "8000:8000"
+
+  multiagent:
+    build:
+      context: .
+      target: multiagent
+    env_file:
+      - .env
+    ports:
+      - "8001:8001"
